--- a/maQx/Views/Shared/_TablePage.cshtml
+++ b/maQx/Views/Shared/_TablePage.cshtml
@@ -14,7 +14,7 @@
                     var Controller = ViewContext.RouteData.Values["controller"].ToString();
                 }
 
-                <a ng-href anchor-if="tCtrl.allowCreate" anchor-url="tCtrl.loadUrl('@HttpUtility.UrlEncode((Controller == "Administrators" ? Url.Action("Create","Invites") : Url.Action("Create")))')" class="btn btn-sm btn-primary app-btn btn-disabled"><span class="fa fa-plus"></span> Create</a>
+                <a ng-href anchor-if="tCtrl.allowCreate" anchor-url="tCtrl.loadUrl('@HttpUtility.UrlEncode((Controller == "Administrators" ? Url.Action("Create","Invites") : Url.Action("Create")))')" class="btn btn-sm btn-primary app-btn btn-disabled control-btn"><span class="fa fa-plus"></span> Create</a>
                 <input type="hidden" id="baseNode" value="@Controller" />
                 <button ng-click="tCtrl.reloadData()" type="button" class="btn btn-sm btn-primary app-btn"><span class="fa fa-refresh"></span> Refresh</button>
             </div>
