--- a/maQx/Views/ProductRawMaterials/Index.cshtml
+++ b/maQx/Views/ProductRawMaterials/Index.cshtml
@@ -40,7 +40,7 @@
         else
         {
 
-            <div class="css-fade" ng-hide="dCtrl.proto.formEdit()">
+            <div class="css-fade">
                 <div class="modular-controls">
                     <div class="select-control">
                         <div>
