--- a/maQx/Content/layout.scss
+++ b/maQx/Content/layout.scss
@@ -316,6 +316,10 @@ $header-height: 54;
     @extend %pointer;
 }
 
+.label.red-label {
+    background: #F55D57;
+}
+
 .modal-backdrop {
     height: 100%;
 }
@@ -370,6 +374,17 @@ $header-height: 54;
     padding: 5px  18px 10px 18px;
     .modal-content-title {
         @include font-size(14px);
+    }
+    .modal-content-footer {
+        margin: 0;
+        @include font-size(13px);
+        margin-top: 15px;
+        padding: 10px 10px 0 10px;
+        color: #999;
+        border-top: 1px #E9E9E9 solid;
+        .label {
+            margin-right: 5px;
+        }
     }
     ul.menu-selector-list {
         margin: 15px 0 0 5px;
@@ -1674,6 +1689,20 @@ header {
             background: #fff;
             list-style: none;
             border: #ECECEC thin solid;
+            &.border-less {
+                border: 0;
+            }
+            ul {
+                list-style: none;
+            }
+            .content-pane {
+                display: block;
+                padding: 15px 25px;
+            }
+            .title-text {
+                @include font-size(13px);
+                padding-bottom: 10px;
+            }
             &.pull-control {
                 & > li {
                     padding: 13px;
