--- a/maQx/Views/Machines/Delete.cshtml
+++ b/maQx/Views/Machines/Delete.cshtml
@@ -5,61 +5,28 @@
     Layout = "~/Views/Shared/_FramePage.cshtml";
 }
 
-<h2>Delete</h2>
+<div class="generic-template generic-form detail-template">
+    <h1>Delete machine</h1>
+    <h3 class="delete-detail">
+        Are you sure you want to delete this?
+    </h3>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Machine</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.MachineType)
-        </dt>
+    @{Html.RenderPartial("_View", Model);}
 
-        <dd>
-            @Html.DisplayFor(model => model.MachineType)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MinLoad)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MinLoad)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MaxLoad)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MaxLoad)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Code)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Code)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+        <div class="form-group">
+            <div>
+                <div>
+                    <input type="submit" value="Yes, Delete" class="btn btn-default btn-danger" />
+                </div>
+            </div>
+        </div>
+
+        <div class="generic-form-bottom-tools">
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-sm" })
         </div>
     }
 </div>
